[package]
name = "hello_world"
version = "0.1.0"
authors = ["Lev Orlov <lev.orlov.dev@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "2.1.0", features = ["cosmwasm_1_4"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = "1.0.58"

[dev-dependencies]
cw-multi-test = "2.0.0"
